--- a/style/main.scss
+++ b/style/main.scss
@@ -124,6 +124,13 @@ body {
 .hd_bg {
   position: relative;
   .header_bg {
+    .slick-slide {
+      display: none;
+    }
+    .slick-active {
+      transition: 0.5s;
+      display: block;
+    }
     li {
       height: 100%;
       img {
@@ -148,17 +155,7 @@ body {
         left: 7%;
         transform: translateY(20%);
         opacity: 0;
-        @keyframes hh {
-          from {
-            opacity: 0;
-            transform: translateY(20%);
-          }
-          to {
-            opacity: 1;
-            transform: translateY(0%);
-          }
-        }
-        animation: hh 1s 2s forwards;
+        animation: hh 1s forwards;
       }
       h2 {
         top: 50%;
@@ -176,7 +173,7 @@ body {
             transform: translateY(0%);
           }
         }
-        animation: hh 1s 1s forwards;
+        animation: hh 0.5s 1s forwards;
         &::before {
           content: "";
           position: absolute;
@@ -185,21 +182,6 @@ body {
           padding-right: 50px;
           left: -120px;
           border: 1px solid #fff;
-        }
-      }
-      &:nth-child(2) {
-        transform: translateX(-100%);
-      }
-      &:nth-child(3) {
-        transform: translateX(-200%);
-        p {
-          left: 11%;
-        }
-        h1 {
-          left: 11%;
-        }
-        h2 {
-          left: 14%;
         }
       }
     }
@@ -1505,6 +1487,216 @@ body {
         bottom: -1px;
         background-color: #191919;
         transform: rotate(135deg);
+      }
+    }
+  }
+}
+
+// Dining
+.dining {
+  padding: 50px 140px;
+  display: flex;
+  .wrap {
+    width: 100%;
+    max-width: 1540px;
+    padding: 0 20px;
+  }
+  ul {
+    display: flex;
+    .slick-prev,
+    .slick-next {
+      display: flex;
+      width: 65px;
+      height: 65px;
+      border: 1px solid rgba(48, 48, 48, 0.2);
+      border-radius: 100%;
+      cursor: pointer;
+      color: #191919;
+      pointer-events: fill;
+      z-index: 2;
+      &::before {
+        color: #191919;
+      }
+      &:hover {
+        &::after {
+          content: "";
+          position: absolute;
+          top: -1px;
+          left: 0;
+          z-index: 1;
+          display: block;
+          width: calc(100% + 1px);
+          height: calc(100% + 1px);
+          border-top: 2px solid #353535;
+          border-radius: 100%;
+          animation: vv 3s infinite;
+        }
+      }
+    }
+    .slick-prev {
+      right: 0;
+      left: 93%;
+      transform: rotate(90deg);
+      &::before {
+        font-size: 24px;
+        position: absolute;
+        top: 30%;
+        left: 40%;
+        content: "<";
+      }
+    }
+    .slick-next {
+      transform: rotate(90deg);
+      right: 2.5%;
+      top: 58%;
+      &::before {
+        font-size: 24px;
+        position: absolute;
+        top: 30%;
+        left: 40%;
+        content: ">";
+      }
+    }
+    li {
+      width: 100%;
+      padding: 0 35px 20px 35px;
+      .txt {
+        padding-right: 30px;
+        font-size: 24px;
+      }
+      .img {
+        img {
+          border-radius: 20px;
+        }
+        p {
+          border-left: 1px solid #b2b2b2;
+          margin-top: 30px;
+          padding-left: 20px;
+        }
+        .team {
+          display: flex;
+          align-items: center;
+          padding-top: 30px;
+          .img {
+            img {
+              width: 35px;
+              height: 17px;
+            }
+          }
+          p {
+            margin: 0 0 0 20px;
+          }
+        }
+      }
+    }
+    .slick-slide {
+      width: 600px;
+      display: flex;
+    }
+    .slick-list {
+      padding: 55px 20px 20px 35px;
+      margin: 0;
+      width: calc(100% - 300px);
+      overflow: hidden;
+    }
+    .slick-track {
+      .slick-active {
+        transition: 1s;
+        transform: translateY(0);
+      }
+      .slick-current {
+        transition: 1s;
+        transform: translateY(10%);
+      }
+    }
+  }
+  .title {
+    position: relative;
+    right: 10%;
+    display: flex;
+    p {
+      margin-right: 25px;
+      padding-bottom: 15px;
+      font-weight: bolder;
+      position: relative;
+      display: inline-block;
+      font-size: 20px;
+      letter-spacing: 2px;
+      color: #63bedf;
+      &::before {
+        content: "";
+        height: 90px;
+        width: 0px;
+        display: flex;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        border: 1px solid #63bedf;
+      }
+    }
+    h2 {
+      font-size: 55px;
+      letter-spacing: 5px;
+      writing-mode: vertical-rl;
+    }
+    .dining_about {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      &:hover {
+        transition: 1s;
+        button {
+          color: #36af63;
+          border-color: #36af63;
+        }
+        .arrow {
+          background-color: #36af63;
+          @keyframes aa {
+            from {
+              right: -20%;
+            }
+            to {
+              right: -40%;
+            }
+          }
+          animation: aa 1s;
+          &::before {
+            background-color: #36af63;
+          }
+        }
+      }
+      button {
+        height: 40px;
+        position: relative;
+        padding: 10px;
+        background-color: #fff;
+        min-width: 165px;
+        border: 1px solid #191919;
+        border-radius: 50px;
+        font-size: 15px;
+        font-weight: 400;
+        letter-spacing: 1px;
+        text-align: center;
+        color: #191919;
+        cursor: pointer;
+      }
+      .arrow {
+        width: 60px;
+        height: 1px;
+        background-color: #191919;
+        position: absolute;
+        right: -35px;
+        top: 50%;
+        &::before {
+          content: "";
+          width: 1px;
+          height: 15px;
+          position: absolute;
+          right: 3px;
+          bottom: -1px;
+          background-color: #191919;
+          transform: rotate(135deg);
+        }
       }
     }
   }
