--- a/style/main.css
+++ b/style/main.css
@@ -1665,7 +1665,7 @@ body {
 }
 .dining ul li {
   width: 100%;
-  padding: 0 35px 20px 35px;
+  padding: 0 35px 50px 35px;
 }
 .dining ul li .txt {
   padding-right: 30px;
@@ -1798,4 +1798,94 @@ body {
   bottom: -1px;
   background-color: #191919;
   transform: rotate(135deg);
+}
+
+.footer {
+  padding: 85px 50px 50px 140px;
+}
+.footer .footer_box {
+  width: 100%;
+  width: 100%;
+  padding: 103px 0 90px;
+  padding-left: calc(20px + 5.7%);
+  padding-right: 12%;
+  position: relative;
+  background: #bae1d0;
+  border-bottom-right-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.footer .footer_box .wrap {
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer .footer_box .left_box .img {
+  max-width: 259px;
+}
+.footer .footer_box .left_box .title {
+  font-size: 24px;
+  padding-top: 36px;
+}
+.footer .footer_box .left_box .title h2 {
+  font-weight: bolder;
+}
+.footer .footer_box .left_box p {
+  font-size: 14px;
+  padding-top: 18px;
+  color: #191919;
+}
+.footer .footer_box .left_box .txt {
+  font-size: 12px;
+  color: #191919;
+}
+.footer .footer_box .left_box .txt .writer {
+  padding-top: 5px;
+  display: flex;
+}
+.footer .footer_box .left_box .txt .writer h3 {
+  padding-right: 5px;
+}
+.footer .footer_box .left_box .txt .writer span {
+  padding-left: 5px;
+}
+.footer .footer_box .middle_box {
+  padding: 0 20px 0 134px;
+}
+.footer .footer_box .middle_box .title {
+  padding-bottom: 22px;
+  font-size: 25px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  color: #191919;
+}
+.footer .footer_box .middle_box .message {
+  display: flex;
+  padding: 6px 0;
+}
+.footer .footer_box .middle_box .message p {
+  padding-left: 20px;
+}
+.footer .footer_box .middle_box .message .img i {
+  width: 30px;
+  height: 40px;
+  padding-left: 10px;
+}
+.footer .footer_box .right_box .title {
+  padding-bottom: 22px;
+  font-size: 25px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  color: #191919;
+}
+.footer .footer_box .right_box ul {
+  margin-top: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 285px;
+  width: 100%;
+}
+.footer .footer_box .right_box ul li {
+  padding-bottom: 25px;
+  width: 50%;
 }/*# sourceMappingURL=main.css.map */
