--- a/style/main.scss
+++ b/style/main.scss
@@ -1559,7 +1559,7 @@ body {
     }
     li {
       width: 100%;
-      padding: 0 35px 20px 35px;
+      padding: 0 35px 50px 35px;
       .txt {
         padding-right: 30px;
         font-size: 24px;
@@ -1696,6 +1696,104 @@ body {
           bottom: -1px;
           background-color: #191919;
           transform: rotate(135deg);
+        }
+      }
+    }
+  }
+}
+
+// footer
+.footer {
+  padding: 85px 50px 50px 140px;
+  .footer_box {
+    width: 100%;
+    width: 100%;
+    padding: 103px 0 90px;
+    padding-left: calc(20px + 5.7%);
+    padding-right: 12%;
+    position: relative;
+
+    background: #bae1d0;
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 15px;
+    .wrap{
+      width: 100%;
+      max-width: 1200px;
+      display: flex;
+      justify-content: space-between;
+    }
+    .left_box {
+      .img {
+        max-width: 259px;
+      }
+      .title {
+        font-size: 24px;
+        padding-top: 36px;
+        h2 {
+          font-weight: bolder;
+        }
+      }
+      p {
+        font-size: 14px;
+        padding-top: 18px;
+        color: #191919;
+      }
+      .txt {
+        font-size: 12px;
+        color: #191919;
+        .writer {
+          padding-top: 5px;
+          display: flex;
+          h3 {
+            padding-right: 5px;
+          }
+          span {
+            padding-left: 5px;
+          }
+        }
+      }
+    }
+    .middle_box {
+      padding: 0 20px 0 134px ;
+      .title {
+        padding-bottom: 22px;
+        font-size: 25px;
+        font-weight: 500;
+        letter-spacing: 4px;
+        color: #191919;
+      }
+      .message {
+        display: flex;
+        padding: 6px 0;
+        p {
+          padding-left: 20px;
+        }
+        .img {
+          i {
+            width: 30px;
+            height: 40px;
+            padding-left: 10px;
+          }
+        }
+      }
+    }
+    .right_box{
+      .title {
+        padding-bottom: 22px;
+        font-size: 25px;
+        font-weight: 500;
+        letter-spacing: 4px;
+        color: #191919;
+      }
+      ul{
+        margin-top: 25px;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 285px;
+        width: 100%;
+        li{
+          padding-bottom: 25px;
+          width: 50%;
         }
       }
     }
