--- a/style/main.css
+++ b/style/main.css
@@ -191,6 +191,13 @@ body {
   padding-top: 18%;
   margin-left: 30px;
   filter: contrast(0) brightness(10);
+  position: relative;
+}
+.header .img a {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .header .burger {
   width: 24px;
@@ -204,7 +211,7 @@ body {
   height: 43px;
 }
 .header .burger .menu {
-  width: 1px;
+  width: 2px;
   height: 43px;
   background-color: #fff;
   position: absolute;
@@ -215,7 +222,7 @@ body {
 }
 .header .burger .menu::before, .header .burger .menu::after {
   content: "";
-  width: 1px;
+  width: 2px;
   height: 35px;
   left: 0;
   bottom: 0;
@@ -223,15 +230,24 @@ body {
   position: absolute;
   font-size: 12px;
 }
-.header .burger .menu::before:hover, .header .burger .menu::after:hover {
-  transition: 0.5s;
-  height: 43px;
-}
 .header .burger .menu::before {
   left: -10px;
 }
 .header .burger .menu::after {
   left: 10px;
+}
+.header .burger .menu.on {
+  width: 0;
+}
+.header .burger .menu.on::before, .header .burger .menu.on::after {
+  height: 43px;
+  left: 0;
+}
+.header .burger .menu.on::before {
+  transform: rotate(30deg);
+}
+.header .burger .menu.on::after {
+  transform: rotate(150deg);
 }
 .header .burger p {
   color: #fff;
@@ -244,7 +260,7 @@ body {
   left: 30%;
 }
 .header .language_box {
-  padding: 20px 5px;
+  padding: 25px 10px;
   display: flex;
   border: 1px solid #fff;
   color: #fff;
@@ -252,19 +268,64 @@ body {
   justify-content: center;
   align-items: flex-end;
   writing-mode: vertical-lr;
+  position: relative;
+  cursor: pointer;
+}
+.header .language_box:hover {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5);
 }
 .header .language_box p {
   padding-top: 20px;
 }
+.header .language_box .language_list {
+  position: absolute;
+  display: none;
+}
+.header .language_box .language_list.on {
+  display: flex;
+}
+.header .language_box .language_list.on li {
+  padding: 10px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #353535;
+  position: relative;
+  opacity: 0;
+  cursor: pointer;
+  animation: cc 0.5s 0.5s linear forwards;
+}
+.header .language_box .language_list.on li:first-child {
+  background-color: #63bedf;
+  color: #fff;
+  animation: cc 0.5s linear forwards;
+}
+@keyframes cc {
+  from {
+    opacity: 0;
+    right: -50px;
+  }
+  to {
+    opacity: 1;
+    right: -60px;
+  }
+}
+.header .language_box .language_list.on li + li {
+  margin-top: 5px;
+}
 .header .message_box {
-  width: 30px;
-  padding: 20px 5px;
+  width: 40px;
+  padding: 25px 10px;
   margin-top: 10px;
   display: flex;
   flex-direction: column;
   border: 1px solid #fff;
   border-radius: 50px;
   color: #fff;
+}
+.header .message_box:hover {
+  opacity: 0.5;
 }
 .header .message_box img {
   width: 19px;
@@ -1971,6 +2032,11 @@ body {
   letter-spacing: 2.5px;
   padding-left: 20px;
 }
+.footer .footer_box .wrap .go_top a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 .footer .footer_box .wrap .left_box .img {
   max-width: 259px;
   cursor: pointer;
@@ -2044,11 +2110,11 @@ body {
   width: 0;
   height: 1px;
   background: #191919;
+  transition: all 0.5s linear;
 }
 .footer .footer_box .wrap .middle_box .address p:hover::after,
 .footer .footer_box .wrap .middle_box .tel p:hover::after,
 .footer .footer_box .wrap .middle_box .email p:hover::after {
-  transition: 0.5s;
   width: 100%;
 }
 .footer .footer_box .wrap .middle_box .message {
@@ -2095,8 +2161,8 @@ body {
   width: 0;
   height: 1px;
   background: #191919;
+  transition: all 0.5s linear;
 }
 .footer .footer_box .wrap .right_box ul li:hover::after {
-  transition: 0.5s;
   width: 30%;
 }/*# sourceMappingURL=main.css.map */
