--- a/style/main.scss
+++ b/style/main.scss
@@ -25,6 +25,13 @@ body {
     padding-top: 18%;
     margin-left: 30px;
     filter: contrast(0) brightness(10);
+    position: relative;
+    a{
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
   .burger {
     width: 24px;
@@ -42,7 +49,7 @@ body {
       }
     }
     .menu {
-      width: 1px;
+      width: 2px;
       height: 43px;
       background-color: #fff;
       position: absolute;
@@ -53,23 +60,33 @@ body {
       &::before,
       &::after {
         content: "";
-        width: 1px;
+        width: 2px;
         height: 35px;
         left: 0;
         bottom: 0;
         background-color: #fff;
         position: absolute;
         font-size: 12px;
-        &:hover {
-          transition: 0.5s;
-          height: 43px;
-        }
       }
       &::before {
         left: -10px;
       }
       &::after {
         left: 10px;
+      }
+      &.on {
+        width: 0;
+        &::before,
+        &::after {
+          height: 43px;
+          left: 0;
+        }
+        &::before {
+          transform: rotate(30deg);
+        }
+        &::after {
+          transform: rotate(150deg);
+        }
       }
     }
     p {
@@ -84,7 +101,7 @@ body {
     left: 30%;
   }
   .language_box {
-    padding: 20px 5px;
+    padding: 25px 10px;
     display: flex;
     border: 1px solid #fff;
     color: #fff;
@@ -92,19 +109,64 @@ body {
     justify-content: center;
     align-items: flex-end;
     writing-mode: vertical-lr;
+    position: relative;
+    cursor: pointer;
+    &:hover {
+      border: 1px solid rgba($color: #fff, $alpha: 0.5);
+      color: rgba($color: #fff, $alpha: 0.5);
+    }
     p {
       padding-top: 20px;
     }
+    .language_list {
+      position: absolute;
+      display: none;
+      &.on {
+        display: flex;
+        li {
+          padding: 10px;
+          border: 1px solid #fff;
+          border-radius: 50%;
+          background-color: #fff;
+          color: #353535;
+          position: relative;
+          opacity: 0;
+          cursor: pointer;
+          animation: cc 0.5s 0.5s linear forwards;
+          &:first-child {
+            background-color: #63bedf;
+            color: #fff;
+            @keyframes cc {
+              from {
+                opacity: 0;
+                right: -50px;
+              }
+              to {
+                opacity: 1;
+                right: -60px;
+              }
+            }
+            animation: cc 0.5s linear forwards;
+          }
+          & + li {
+            margin-top: 5px;
+          }
+        }
+      }
+    }
   }
   .message_box {
-    width: 30px;
-    padding: 20px 5px;
+    width: 40px;
+    padding: 25px 10px;
     margin-top: 10px;
     display: flex;
     flex-direction: column;
     border: 1px solid #fff;
     border-radius: 50px;
     color: #fff;
+    &:hover {
+    opacity: 0.5;
+    }
     img {
       width: 19px;
       height: 14px;
@@ -249,7 +311,6 @@ body {
       .title {
         padding-bottom: 10px;
         position: relative;
-
         &::after {
           content: "";
           width: 0%;
@@ -264,7 +325,6 @@ body {
       .txt {
         display: flex;
         position: relative;
-        
         &::after {
           content: "";
           width: 0%;
@@ -273,7 +333,7 @@ body {
           bottom: 10%;
           left: 0;
           background-color: #fff;
-          transition: all 0.5s  linear;
+          transition: all 0.5s linear;
         }
       }
       span {
@@ -283,7 +343,7 @@ body {
         .title {
           &::after {
             width: 100%;
-            transition: all 0.5s  linear;
+            transition: all 0.5s linear;
           }
         }
         .txt {
@@ -1885,6 +1945,11 @@ body {
           letter-spacing: 2.5px;
           padding-left: 20px;
         }
+        a {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+        }
       }
       .left_box {
         .img {
@@ -1958,10 +2023,10 @@ body {
               width: 0;
               height: 1px;
               background: #191919;
+              transition: all 0.5s linear;
             }
             &:hover {
               &::after {
-                transition: 0.5s;
                 width: 100%;
               }
             }
@@ -2013,10 +2078,10 @@ body {
               width: 0;
               height: 1px;
               background: #191919;
+              transition: all 0.5s linear;
             }
             &:hover {
               &::after {
-                transition: 0.5s;
                 width: 30%;
               }
             }
