--- a/style/main.css
+++ b/style/main.css
@@ -287,7 +287,7 @@ body {
 }
 .header .language_box .language_list.on li {
   padding: 10px;
-  border: 1px solid #fff;
+  border: 1px solid #b2b2b2;
   border-radius: 50%;
   background-color: #fff;
   color: #353535;
