--- a/style/main.scss
+++ b/style/main.scss
@@ -125,7 +125,7 @@ body {
         display: flex;
         li {
           padding: 10px;
-          border: 1px solid #fff;
+          border: 1px solid #b2b2b2;
           border-radius: 50%;
           background-color: #fff;
           color: #353535;
