--- a/style/main.css
+++ b/style/main.css
@@ -174,6 +174,143 @@ html,
 body {
   scroll-behavior: smooth;
 }
+html:has(.menu_bg.on),
+body:has(.menu_bg.on) {
+  overflow-y: hidden;
+}
+
+.menu_bg {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  transform: translateX(-100%);
+  transition: all 1s linear;
+  background-image: url(../img/menu_bg__23K07p125u.jpg);
+  background-size: cover;
+}
+.menu_bg .wrap {
+  height: 100%;
+  position: relative;
+}
+.menu_bg .wrap ul {
+  padding-top: 3px;
+  padding-left: 160px;
+  position: absolute;
+  top: 35%;
+  left: 10%;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 880px;
+  width: 100%;
+  z-index: 3;
+  color: #fff;
+}
+.menu_bg .wrap ul li {
+  padding: 0 20px 62px 0;
+  width: 50%;
+  font-size: 19px;
+  position: relative;
+}
+.menu_bg .wrap ul li::after {
+  content: "";
+  position: absolute;
+  width: 15%;
+  height: 1px;
+  background-color: #fff;
+  transition: all 0.5s linear;
+}
+.menu_bg .wrap ul li h2 {
+  padding-bottom: 5px;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
+.menu_bg .wrap ul li p {
+  padding-bottom: 10px;
+}
+.menu_bg .wrap ul li:hover::after {
+  width: 80%;
+}
+.menu_bg .wrap ul li:nth-child(even) {
+  padding-left: 30px;
+}
+.menu_bg .wrap .top_box {
+  position: absolute;
+  top: 35%;
+  right: 20%;
+  z-index: 2;
+  color: #fff;
+  letter-spacing: 0.8px;
+}
+.menu_bg .wrap .top_box .address p,
+.menu_bg .wrap .top_box .tel p,
+.menu_bg .wrap .top_box .email p {
+  position: relative;
+  cursor: pointer;
+}
+.menu_bg .wrap .top_box .address p::after,
+.menu_bg .wrap .top_box .tel p::after,
+.menu_bg .wrap .top_box .email p::after {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  display: block;
+  width: 0;
+  height: 1px;
+  background: #fff;
+  transition: all 0.5s linear;
+}
+.menu_bg .wrap .top_box .address p:hover::after,
+.menu_bg .wrap .top_box .tel p:hover::after,
+.menu_bg .wrap .top_box .email p:hover::after {
+  width: 100%;
+}
+.menu_bg .wrap .top_box .message {
+  display: flex;
+  padding: 6px 0;
+}
+.menu_bg .wrap .top_box .message h2 {
+  width: 50px;
+}
+.menu_bg .wrap .top_box .message p {
+  margin-left: 20px;
+}
+.menu_bg .wrap .top_box .message:last-child {
+  padding-top: 30px;
+}
+.menu_bg .wrap .top_box .message:last-child p {
+  margin-left: 0;
+}
+.menu_bg .wrap .top_box .img {
+  padding: 40px 0 15px;
+}
+.menu_bg .wrap .top_box .img i {
+  width: 40px;
+  height: 50px;
+  padding-left: 10px;
+}
+.menu_bg .wrap .top_box .img i:hover {
+  cursor: pointer;
+  transition: 0.5s;
+  opacity: 0.5;
+}
+.menu_bg.on {
+  transform: translateX(0%);
+}
+.menu_bg::before {
+  content: "";
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to bottom, rgba(59, 175, 219, 0.5) 0%, rgba(54, 175, 101, 0.5) 100%);
+  z-index: 2;
+}
 
 .header {
   width: 140px;
@@ -184,7 +321,7 @@ body {
   justify-content: space-between;
   position: fixed;
   border-right: 1px solid #b2b2b2;
-  z-index: 2;
+  z-index: 3;
 }
 .header .img {
   width: 70px;
@@ -554,6 +691,7 @@ body {
   z-index: 50;
   text-align: center;
   color: #fff;
+  z-index: 1;
 }
 .hd_bg .remind .wrap {
   padding: 0 20px;
@@ -808,7 +946,6 @@ body {
   position: absolute;
   background: #fff;
   left: -130px;
-  z-index: 2;
 }
 .field .field_list .slick-list {
   overflow: initial;
@@ -853,11 +990,11 @@ body {
   cursor: pointer;
   color: #191919;
   pointer-events: fill;
-  z-index: 2;
 }
 .field .field_list .slick-prev::before,
 .field .field_list .slick-next::before {
   color: #191919;
+  z-index: 0;
 }
 .field .field_list .slick-prev:hover::after,
 .field .field_list .slick-next:hover::after {
