--- a/style/main.scss
+++ b/style/main.scss
@@ -7,6 +7,148 @@
 html,
 body {
   scroll-behavior: smooth;
+  &:has(.menu_bg.on) {
+    overflow-y: hidden;
+  }
+}
+
+.menu_bg {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  transform: translateX(-100%);
+  transition: all 1s linear;
+  background-image: url(../img/menu_bg__23K07p125u.jpg);
+  background-size: cover;
+  .wrap {
+    height: 100%;
+    position: relative;
+    ul {
+      padding-top: 3px;
+      padding-left: 160px;
+      position: absolute;
+      top: 35%;
+      left: 10%;
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 880px;
+      width: 100%;
+      z-index: 3;
+      color: #fff;
+      li {
+        padding: 0 20px 62px 0;
+        width: 50%;
+        font-size: 19px;
+        position: relative;
+        &::after {
+          content: "";
+          position: absolute;
+          width: 15%;
+          height: 1px;
+          background-color: #fff;
+          transition: all 0.5s linear;
+        }
+        h2 {
+          padding-bottom: 5px;
+          font-size: 30px;
+          font-weight: 500;
+          letter-spacing: 0.5px;
+        }
+        p {
+          padding-bottom: 10px;
+        }
+        &:hover {
+          &::after {
+            width: 80%;
+          }
+        }
+        &:nth-child(even) {
+          padding-left: 30px;
+        }
+      }
+    }
+    .top_box {
+      position: absolute;
+      top: 35%;
+      right: 20%;
+      z-index: 2;
+      color: #fff;
+      letter-spacing: 0.8px;
+      .address,
+      .tel,
+      .email {
+        p {
+          position: relative;
+          cursor: pointer;
+          &::after {
+            content: "";
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            display: block;
+            width: 0;
+            height: 1px;
+            background: #fff;
+            transition: all 0.5s linear;
+          }
+          &:hover {
+            &::after {
+              width: 100%;
+            }
+          }
+        }
+      }
+      .message {
+        display: flex;
+        padding: 6px 0;
+        h2 {
+          width: 50px;
+        }
+        p {
+          margin-left: 20px;
+        }
+        &:last-child {
+          padding-top: 30px;
+          p {
+            margin-left: 0;
+          }
+        }
+      }
+      .img {
+        padding: 40px 0 15px;
+        i {
+          width: 40px;
+          height: 50px;
+          padding-left: 10px;
+          &:hover {
+            cursor: pointer;
+            transition: 0.5s;
+            opacity: 0.5;
+          }
+        }
+      }
+    }
+  }
+  &.on {
+    transform: translateX(0%);
+  }
+  &::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(
+      to bottom,
+      rgba(59, 175, 219, 0.5) 0%,
+      rgba(54, 175, 101, 0.5) 100%
+    );
+    z-index: 2;
+  }
 }
 
 // header
@@ -19,14 +161,14 @@ body {
   justify-content: space-between;
   position: fixed;
   border-right: 1px solid #b2b2b2;
-  z-index: 2;
+  z-index: 3;
   .img {
     width: 70px;
     padding-top: 18%;
     margin-left: 30px;
     filter: contrast(0) brightness(10);
     position: relative;
-    a{
+    a {
       position: absolute;
       left: 0;
       width: 100%;
@@ -165,7 +307,7 @@ body {
     border-radius: 50px;
     color: #fff;
     &:hover {
-    opacity: 0.5;
+      opacity: 0.5;
     }
     img {
       width: 19px;
@@ -407,6 +549,7 @@ body {
     z-index: 50;
     text-align: center;
     color: #fff;
+    z-index: 1;
     .wrap {
       padding: 0 20px;
       p {
@@ -666,7 +809,6 @@ body {
       position: absolute;
       background: #fff;
       left: -130px;
-      z-index: 2;
     }
     .slick-list {
       overflow: initial;
@@ -715,9 +857,10 @@ body {
       cursor: pointer;
       color: #191919;
       pointer-events: fill;
-      z-index: 2;
+      // z-index: 2;
       &::before {
         color: #191919;
+        z-index: 0;
       }
       &:hover {
         &::after {
