--- a/style/main.scss
+++ b/style/main.scss
@@ -365,13 +365,26 @@ body {
       display: none;
     }
     .slick-active {
+      
       transition: 0.5s linear;
       display: block;
+
     }
     li {
       height: 100%;
       img {
         width: 50%;
+        @keyframes ii {
+          from{
+            transform: scale(1.05);
+            transform-origin: center center;
+          }
+          to{
+            transform: scale(1);
+            transform-origin: center center;
+          }
+        }
+        animation: ii 10s forwards linear;
       }
       p {
         position: absolute;
@@ -380,6 +393,7 @@ body {
         min-width: 25px;
         font-size: 25px;
         color: #fff;
+        z-index: 2;
       }
       h1,
       h2 {
@@ -421,6 +435,33 @@ body {
           border: 1px solid #fff;
         }
       }
+      .txt{
+        max-width: 1720px;
+        padding: 68px 19% 20px 160px;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
+    }
+    &.go_down{
+      @keyframes gg {
+        from{
+          opacity: 0;
+          transform: translateY(-5%);
+        }
+        to{
+          opacity: 1;
+          transform: translateY(0);
+        }
+        
+      }
+      animation: gg 5s forwards;
     }
   }
   .hd_news {
@@ -673,9 +714,33 @@ body {
     width: 570px;
     clip-path: circle(50% at 50% 50%);
     overflow: hidden;
+    &
     img {
-      height: 570px;
+      width: 100%;
+    height: 110%;
       object-fit: cover;
+      &.down{
+        @keyframes jj {
+          from{
+           transform: matrix(1, 0, 0, 1, 0, -16);;
+          }
+          to{
+            transform: matrix(1, 0, 0, 1, 0, -50);;
+          }
+        }
+        animation: jj 10s forwards linear;
+      }
+      &.on{
+        @keyframes kk {
+          from{
+            transform: matrix(1, 0, 0, 1, 0, -50);;
+          }
+          to{
+            transform: matrix(1, 0, 0, 1, 0, -16);;
+          }
+        }
+        animation: kk 10s forwards linear;
+      }
     }
   }
   ul {
