--- a/style/main.css
+++ b/style/main.css
@@ -522,6 +522,17 @@ body:has(.menu_bg.on) {
 }
 .hd_bg .header_bg li img {
   width: 50%;
+  animation: ii 10s forwards linear;
+}
+@keyframes ii {
+  from {
+    transform: scale(1.05);
+    transform-origin: center center;
+  }
+  to {
+    transform: scale(1);
+    transform-origin: center center;
+  }
 }
 .hd_bg .header_bg li p {
   position: absolute;
@@ -530,6 +541,7 @@ body:has(.menu_bg.on) {
   min-width: 25px;
   font-size: 25px;
   color: #fff;
+  z-index: 2;
 }
 .hd_bg .header_bg li h1,
 .hd_bg .header_bg li h2 {
@@ -570,6 +582,32 @@ body:has(.menu_bg.on) {
   padding-right: 50px;
   left: -120px;
   border: 1px solid #fff;
+}
+.hd_bg .header_bg li .txt {
+  max-width: 1720px;
+  padding: 68px 19% 20px 160px;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.hd_bg .header_bg.go_down {
+  animation: gg 5s forwards;
+}
+@keyframes gg {
+  from {
+    opacity: 0;
+    transform: translateY(-5%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 .hd_bg .hd_news {
   max-width: 536px;
@@ -811,9 +849,32 @@ body:has(.menu_bg.on) {
   overflow: hidden;
 }
 .brand .img img {
-  height: 570px;
+  width: 100%;
+  height: 110%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.brand .img img.down {
+  animation: jj 10s forwards linear;
+}
+@keyframes jj {
+  from {
+    transform: matrix(1, 0, 0, 1, 0, -16);
+  }
+  to {
+    transform: matrix(1, 0, 0, 1, 0, -50);
+  }
+}
+.brand .img img.on {
+  animation: kk 10s forwards linear;
+}
+@keyframes kk {
+  from {
+    transform: matrix(1, 0, 0, 1, 0, -50);
+  }
+  to {
+    transform: matrix(1, 0, 0, 1, 0, -16);
+  }
 }
 .brand ul {
   display: flex;
